# LabInfer

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  hello_engine  linux_build.sh  llama3.cu  makefile  run.sh  windows_build.bat  产品开发.md  开发日记.md  现有产品调研.md
GCCL/: README.md  gccl.cc  gccl.h  main.cc  test  test.cc
include/: Allocator.h  Batch.h  CPUMemoryManager.h  CUDAMemoryManager.h  Cache.h  Communicator.h  Config.h  ConfigParser.h  Device.h  DeviceManager.h  Engine.h  Function.h  InputWarp.h  KVCacheManager.h  Layer.h  Manager.h  MemoryManager.h  Parameter.h  PoolMemoryManager.h  SafePrinter.h  SafeQueue.h  Sampler.h  Tensor.h  Variable.h  Worker.h  WorkerFactory.h  common.h  function.h  layers.h  models.h  registry.h
include/CPU/: CPUMemoryManager.h  CPUWorker.h
include/CUDA/: CUDAFunction.h  CUDAMemoryManager.h  CUDAUtils.h  CUDAWorker.h
include/allocator/: Allocator.h  CPUAllocator.h  CUDAAllocator.h
notebook/: llama3.md
scripts/: weights.py
src/: CMakeLists.txt  CPUMemoryManager.cpp  CUDAMemoryManager.cu  Communicator.cc  Config.h  ConfigParser.cpp  Engine.cc  Engine.cpp  KVCacheManager.cpp  PoolMemoryManager.cpp  Worker.cpp  main.cc  main.cpp  producer_consumer
src/CPU/: CPUMemoryManager.cpp  CPUWorker.cpp
src/CUDA/: CUDA.cu  CUDAAllocator.cu  CUDAFuction.cu  CUDAFunction.cu  CUDAMemoryManager.cu  CUDAUtils.h  CUDAWorker.cu
src/allocator/: Allocator.h
src/cache/: cache.cc
src/device/: CPU.h  CUDA.cu  CUDA.h  Device.cc  Device.h  DeviceFactory.h  DeviceManager.h
src/device/CUDA/: CUDA.cu  CUDA.h  CUDAAllocator.cu  CUDAAllocator.h  CUDAFunction.cu  CUDAFunction.h  CUDAUtils.h
src/device/allocator/: Allocator.h  AllocatorFactory.h  RegisterAllocator.h
src/device/allocator/cpu/: CPUAllocator.cc  CPUAllocator.h
src/device/allocator/cuda/: CUDAAllocator.cu  CUDAAllocator.h
src/device/function/: llama3.cu
src/device/function/cpu/: CPUFunction.cc  CPUFunction.h
src/device/function/cuda/: CUDAFunction.cu  CUDAFunction.h  CudaFunctionLibrary.h  add_cuda.cu  add_cuda.h  attention_cuda.cu  attention_cuda.h  common.h  embedding_cuda.cu  embedding_cuda.h  matmul.cu  matmul.h  matmul_cuda.cu  matmul_cuda.h  max_index_cuda.cu  max_index_cuda.h  rmsnorm.cu  rmsnorm.h  rmsnorm_cuda.cu  rmsnorm_cuda.h  rope_cuda.cu  rope_cuda.h  silu_cuda.cu  silu_cuda.h  softmax_cuda.cu  softmax_cuda.h
src/engine/: Engine.cc
src/function/cuda/: common.h  cuda_function.cu  cuda_function.h  matmul.cu  mykernel.cu  rmsnorm.cu
src/layer/: Add.h  Attention.h  DecoderLayer.h  Embedding.h  Layer.h  LayerList.h  Linear.h  Mlp.h  Parameter.h  RMSNorm.h  RoPE.h  Silu.h  Softmax.h  layer.cc  safetensors.h  variable.cc
src/layers/: Attention.cc  DecoderLayer.cc  Embedding.cc  LayerList.cc  Linear.cc  Max.cc  Mlp.cc  RMSNorm.cc  RoPE.cc  Sampling.cc  layer.cc
src/main/: main.cc
src/manager/: Manager.cc  Manager.h
src/model/: llama.h  model.cc  paramLoader.cc
src/ops/add_elem/: add_elem_cpu.cpp  add_elem_cuda.cu
src/ops/linear/: linear_cpu.cpp  linear_cuda.cu
src/ops/max_index/: max_index_cpu.cpp  max_index_cuda.cu
src/ops/multiply_elem/: multiply_elem_cpu.cpp  multiply_elem_cuda.cu
src/ops/rms_norm/: rms_norm_cpu.cpp  rms_norm_cuda.cu
src/ops/rope/: rope_cpu.cpp  rope_cuda.cu
src/ops/silu/: silu_cpu.cpp  silu_cuda.cu
src/ops/softmax/: softmax_cpu.cpp  softmax_cuda.cu
src/variable/: Parameter.h  Variable.cc  Variable.h
test/: test.h
unit_test/: run_gpu_tests_nvcc.exp  test_pool_memory_manager_cpu.cpp  test_pool_memory_manager_cuda.cu
(+73 files in other folders)
